# ceph-devstack

./: .pre-commit-config.yaml  Jenkinsfile  README.md  local.sh  localrc  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml  pytest.yml  release.yml  tox.yml
ceph_devstack/: __init__.py  block_pool.py  ceph_devstack.pp  ceph_devstack.te  cli.py  config.toml  exec.py  host.py  requirements.py  sccache-s3.conf  sccache.conf
ceph_devstack/resources/: __init__.py  container.py
ceph_devstack/resources/ceph/: __init__.py  block_devices.py  ceph-node-entrypoint.sh  ceph_builder.py  ceph_node.py  containers.py  host_loops.py  requirements.py  utils.py
ceph_devstack/resources/test/: test_testnode.py
tests/: conftest.py  test_block_pool.py  test_cli.py  test_config.py  test_deep_merge.py  test_exec.py  test_host.py  test_parse_args.py  test_requirements_core.py  test_stacks.py
tests/integration/: test_ceph_stack.py  test_ceph_stack.sh
tests/resources/: test_container.py  test_misc.py  test_podmanresource.py
tests/resources/ceph/: conftest.py  test_block_devices.py  test_ceph_builder.py  test_ceph_node.py  test_cephdevstack_core.py  test_devstack.py  test_env_vars.py  test_host_loops.py  test_requirements_ceph.py  test_ssh_keypair.py  test_testnode.py
tests/resources/ceph/fixtures/: testnode-config.toml
