[project]
name = "ceph-devstack"
authors = [{ name = "Zack Cerza", email = "zack@cerza.org" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]
keywords = ["podman", "ceph"]
description = "Run a full teuthology lab on your laptop!"
requires-python = ">=3.12"
dependencies = ["packaging", "pre-commit", "PyYAML", "tomlkit"]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/ceph/ceph-devstack"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio", "tox", "tox-uv"]

[project.scripts]
ceph-devstack = "ceph_devstack.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
namespaces = false

[tool.setuptools_scm]
version_scheme = "python-simplified-semver"

[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "wheel",
    "setuptools-scm>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
