[metadata]
name = ceph-devstack
long_description = file: README.md
long_description_content_type = text/x-markdown
url = https://github.com/ceph/ceph-devstack
author = Zack Cerza <zack@cerza.org>
license = MIT
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
description_content_type = text/x-rst; charset=UTF-8
description_file = README.rst
keywords = podman, ceph
summary = Run a full teuthology lab on your laptop!

[options]
packages = find:
install_requires =
    packaging
    pre-commit
    PyYAML
    tomlkit
python_requires = >=3.8
include_package_data = True

[options.entry_points]
console_scripts =
    ceph-devstack = ceph_devstack.cli:main

[options.extras_require]
test =
    pytest
    pytest-asyncio
